--- a/scss/base/navbar.scss
+++ b/scss/base/navbar.scss
@@ -1,30 +1,30 @@
-.navbar {
+header {
     display: flex;
     justify-content: space-between;
     background-color: black;
     align-items: center;
-    padding: 13px;
+    padding: 18px;
 
     .navbarLogo {
-        width: 80px;
+        max-width: 5rem;
         margin-left: 40px;
-
-        img {
-            width: 100%;
-        }
     }
 
     .navbarNavegacion {
         display: flex;
         justify-content: space-between;
+        gap: 2rem;
 
-        @media screen and (max-width: 768px) {
-            display: none;
+        li {
+            transition: all 200ms ease-in-out;
+
+            &:hover {
+                transform: scale(1.2);
+            }
         }
 
         a {
-            color: gray;
-            margin-right: 40px;
+            color: rgb(178, 178, 178);
             transition: all 200ms ease-in-out;
             border-bottom: 2px solid gray;
             text-decoration: none;
@@ -32,10 +32,61 @@
 
             &:hover {
                 color: white;
-                border-color: rgba(0, 0, 0, 0);
-                transform: scale(1.2);
+                border-color: rgb(255, 0, 0);
             }
         }
     }
 
+    .abrirMenu,
+    .cerrarMenu {
+        display: none;
+    }
+
+    @media screen and (max-width: 740px) {
+
+        .abrirMenu,
+        .cerrarMenu {
+            display: block;
+            border: 0;
+            font-size: 1.25rem;
+            color: white;
+            background-color: transparent;
+            cursor: pointer;
+        }
+
+        .navbar {
+            opacity: 0;
+            visibility: hidden;
+
+            display: flex;
+            flex-direction: column;
+            align-items: end;
+            gap: 1rem;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgb(60, 60, 60);
+            padding: 2rem;
+            box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
+        }
+
+        .navbar.visible {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .navbarNavegacion {
+            flex-direction: column;
+            align-items: end;
+
+            a {
+                color: rgb(176, 176, 176);
+
+                &:hover {
+                    color: white;
+                }
+            }
+        }
+    }
 }
