--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,6 @@
+//base 
 @import "base/general.scss";
-@import "base/navbar";
+@import "base/navbar.scss";
+@import "base/inicio.scss";
+@import "base/sobreNosotros.scss";
+@import "base/linea.scss";
